# agent-builder

./: .env.example  Cargo.toml  README.md  justfile
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  lib.rs  main.rs
crates/agent/src/nodes/: llm.rs  mod.rs
crates/init-log/: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: lib.rs  state.rs  value.rs
crates/node/src/node/: mod.rs  node_data.rs  node_instance.rs
crates/node/src/node/built_in_nodes/: mod.rs  print.rs  text.rs
