[package]
name = "agent"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
rand.workspace = true
envstruct.workspace = true
dotenvy.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
derive_more.workspace = true

init-log.workspace = true
node.workspace = true
